--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "putout-editor-react",
   "version": "0.1.0",
   "private": true,
+  "commitType": "colon",
   "dependencies": {
     "@codemirror/lang-javascript": "^6.0.1",
     "@emotion/react": "^11.9.3",
