--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "rules": {
         "import/no-anonymous-default-export": "off",
         "react/jsx-curly-brace-presence": ["error", "never"],
-        "react/self-closing-comp": "error"
+        "react/self-closing-comp": "error",
+        "no-new-func": "off"
     },
     "extends": [
         "react-app",
