feature: add ability to run transform when updating the source

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "putout-editor-react",
   "version": "0.1.0",
+  "type": "commonjs",
   "private": true,
   "commitType": "colon",
   "dependencies": {
