--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "commitType": "colon",
   "dependencies": {
     "@codemirror/lang-javascript": "^6.0.1",
+    "@codemirror/lang-json": "^6.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.0",
