--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "putout-editor-react",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "commitType": "colon",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/putoutjs/mobile-putout-editor.git"
+  },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.0.1",
     "@codemirror/lang-json": "^6.0.0",
