--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@putout/plugin-react-hooks": "^5.0.0",
     "eslint": "^8.19.0",
     "eslint-plugin-putout": "^19.1.0",
