--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@codemirror/lang-json": "^6.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.9.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
