--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^8.19.0",
     "eslint-plugin-putout": "^22.7.0",
     "madrun": "^10.0.1",
+    "once": "^1.4.0",
     "putout": "^35.22.1",
     "wraptile": "^3.0.0"
   }
