--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.9.0",
+    "@replit/codemirror-vim": "^6.2.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.4.3",
