--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/putoutjs/mobile-putout-editor.git"
+    "url": "git+https://github.com/putoutjs/mobile-putout-editor.git"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.0.1",
