--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "putout-editor-react",
   "version": "1.21.3",
+  "type": "module",
   "private": true,
   "repository": {
     "type": "git",
@@ -19,9 +20,14 @@
     "@testing-library/user-event": "^14.4.3",
     "@uiw/react-codemirror": "^4.11.4",
     "flatlint": "^3.0.0",
+    "globals": "^16.0.0",
+    "montag": "^1.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "try-catch": "^3.0.1",
+    "try-to-catch": "^3.0.1",
     "web-vitals": "^3.3.1"
   },
   "scripts": {
@@ -44,11 +50,16 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": ">=22"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@putout/plugin-react-hooks": "^6.0.0",
     "eslint": "^9.24.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-putout": "^26.1.0",
+    "eslint-plugin-react": "^7.37.5",
     "madrun": "^11.0.1",
     "once": "^1.4.0",
     "putout": "^40.0.1",
