--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
@@ -76,9 +75,9 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "madrun start",
-    "build": "madrun build",
-    "test": "madrun test",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "madrun scripts/test.js",
     "lint": "madrun lint",
     "fix:lint": "madrun fix:lint"
   },
@@ -106,6 +105,7 @@
     "eslint-plugin-react": "^7.37.5",
     "madrun": "^11.0.1",
     "once": "^1.4.0",
+    "path-browserify": "^1.0.1",
     "putout": "^40.0.1",
     "wraptile": "^3.0.0"
   },
