--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "putout-editor-react",
+  "name": "mobile-putout-editor",
   "version": "1.23.0",
   "private": true,
   "repository": {
@@ -33,7 +33,6 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "flatlint": "^3.0.0",
