--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "flatlint": "^3.0.0",
     "fs-extra": "^10.0.0",
