--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+*.swp
+*.log
+*.lock
 
-# dependencies
-/node_modules
-/.pnp
 .pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.idea
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/.pnp
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.idea
-*.swp
-yarn-error.log
+
+/node_modules
+/coverage
+/build
 coverage
