--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     ]
   },
   "engines": {
-    "node": ">=22"
+    "node": ">=22",
+    "bun": ">=1.39"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
